--- a/src/components/FormWrapper/FormWrapper.css
+++ b/src/components/FormWrapper/FormWrapper.css
@@ -1,15 +1,15 @@
 .formWrapper{
     min-width: 396px;
-    margin: 70px auto;
+    margin: 68px auto;
 }
 
-.title__form{
-    margin: 40px auto;
+.form__title{
+    margin: 43px auto;
     font-size: 24px;
     font-weight: 500;
 }
 
-.submit__form{
+.form__submit-register, .form__submit-login{
     width: 396px;
     height: 45px;
     border: none;
@@ -18,12 +18,15 @@
     border-radius: 3px;
     font-size: 14px;
     font-weight: 500;
-    margin: 69px auto 16px;
     cursor: pointer;
 }
 
-.submit__form:hover{
-    opacity: .8;
+.form__submit-register{
+    margin: 73px auto 16px;
+}
+
+.form__submit-login{
+    margin: 157px auto 16px;
 }
 
 .form__change{
@@ -48,17 +51,20 @@
     cursor: pointer;
 }
 
-.form__change-link:hover{
-    opacity: .8;
-}
-
-.form__subtitle{
+.input__label{
     font-size: 10px;
     font-weight: 400;
     margin: 0;
     padding-bottom: 10px;
     box-sizing: border-box;
     color: #8B8B8B;
+}
+
+.input__error{
+    height: 10px;
+    margin: 0;
+    color: #EE3465;
+    font-size: 10px;
 }
 
 .input{
@@ -71,8 +77,21 @@
     box-sizing: border-box;
     color: #fff;
     font-size: 13px;
+    margin-bottom: 10px;
 }
 
-.input:not(:last-of-type){
-    margin-bottom: 20px;
+.submit__form:hover{
+    opacity: .8;
+}
+
+.form__change-link:hover{
+    opacity: .8;
+}
+
+
+@media screen and (max-width: 980px) {
+    .formWrapper{
+        min-width: 396px;
+        margin: 230px auto;
+    }
 }
