--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
 @import url(./components/HeaderLogo/HeaderLogo.css);
 @import url(./components/LoadMoreMovie/LoadMoreMovie.css);
 @import url(./components/FormWrapper/FormWrapper.css);
+@import url(./components/Login/Login.css);
+@import url(./components/Register/Register.css);
 @import url(./components/Main/Main.css);
 @import url(./components/Movies/Movies.css);
 @import url(./components/MoviesCard/MoviesCard.css);
