--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    align-items: center
 }
 
 .profile__change{
@@ -60,6 +61,7 @@
     font-weight: 400;
     color: #EE3465;
     cursor: pointer;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 980px) {
