--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,15 +1,14 @@
 
 .filterCheckbox{
+	grid-area: filterCheckBox;
 	margin: 28px auto 40px;
 	border-radius: 3px;
-	padding: 0 0 39px;
 	box-sizing: border-box;
     display: flex;
     max-width: 1140px;
     align-items: flex-start;
 	justify-content: center;
     gap: 12px;
-	border-bottom: 1px solid #424242;
 }
 
 .filterCheckbox__title{
