--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -5,6 +5,7 @@
     grid-template-columns: repeat(3, 1fr);
     row-gap: 60px;
     column-gap: 30px;
+    padding: 0;
 }
 
 @media screen and (min-width: 1281px) {
