--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,11 +3,16 @@
     max-width: 1140px;
     display: grid;
     grid-template-columns: 1fr 44px;
+    grid-template-areas: 
+    "searchInput searchButton"
+    "filterCheckBox filterCheckBox";
     align-items: center;
-    gap: 10px;
+    border-bottom: 1px solid #424242;
+    column-gap: 10px;
 }
 
 .searchForm__input{
+    grid-area: searchInput;
     height: 50px;
     outline:none;
     border: none;
@@ -23,6 +28,7 @@
 }
 
 .searchForm__submit{
+    grid-area: searchButton;
     width: 44px;
     height: 44px;
     padding: 0;
