--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -44,7 +44,7 @@ right: 0;
 top: -3px;
 }
 
-.portfolio__work_link{
+.portfolio__link{
   text-decoration: none;
   color: #fff;
   font-size: 30px;
@@ -64,7 +64,7 @@ top: -3px;
     .portfolio{
         margin: 0 50px 90px;
       }
-      .portfolio__work_link{
+      .portfolio__link{
         font-size: 28px;
       }
 }
@@ -78,7 +78,7 @@ top: -3px;
         line-height: 20px;
         margin: 0 0 40px;
     }
-    .portfolio__work_link{
+    .portfolio__link{
         font-size: 18px;
         line-height: 28px;
         letter-spacing: -0.7px;
