--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 @import url(./components/Header/Header.css);
 @import url(./components/HeaderLogo/HeaderLogo.css);
 @import url(./components/LoadMoreMovie/LoadMoreMovie.css);
-@import url(./components/FormWrapper/FormWrapper.css);
+@import url(./components/Form/Form.css);
 @import url(./components/Login/Login.css);
 @import url(./components/Register/Register.css);
 @import url(./components/Main/Main.css);
