--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -88,6 +88,11 @@
     opacity: .8;
 }
 
+.form__input:focus{
+    outline: none;
+    box-shadow: 0 0 4px 1px #fff;
+}
+
 
 @media screen and (max-width: 980px) {
     .form{
