--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -41,6 +41,11 @@
     cursor: pointer;
 }
 
+.searchForm__input:focus{
+    outline: none;
+    box-shadow: 0 0 4px 1px #fff;
+}
+
 @media screen and (min-width: 1281px) {
     .searchForm{
         margin: 80px auto 29px;
