--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -87,7 +87,7 @@
     margin: 0;
     width: 28px;
     height: 23px;
-    background-image: url(../../images/headerBurger.png);
+    background-image: url(../../images/headerBurger.svg);
     border: none;
     background-color: transparent;
     cursor: pointer;
