--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 28px;
+    gap: 25px;
   }
 
   .sideBar__link{
@@ -26,6 +26,11 @@
     font-weight: 500;
     text-decoration: none;
     color: #fff;
+    border-bottom: 1px solid transparent;
+  }
+
+  .sideBar__link:hover{
+    border-bottom: 1px solid #fff;
   }
 
   @media screen and (min-width: 769px) {
