--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -80,8 +80,8 @@
     margin-bottom: 10px;
 }
 
-.submit__form:hover{
-    opacity: .8;
+.form__submit-register, .form__submit-login:hover{
+    box-shadow: 2px 2px 20px 0px rgba(181, 183, 184, 0.2);
 }
 
 .form__change-link:hover{
