--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -32,6 +32,10 @@
   font-size: 14px;
 }
 
+.notFoundPage__hover{
+    opacity: .5;
+  }
+
 @media screen and (max-width: 980px) {
     .notFoundPage{
         padding: 410px 0 0;
