--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -95,10 +95,11 @@
 
   .header__icon_opened {
     display: none;
-    padding: 0;
-    margin: 0;
-    width: 22px;
-    height: 22px;
+    width: 28px;
+    height: 28px;
+    position: fixed;
+    right: 24px;
+    top: 24px;
     background-image: url(../../images/closeSideBar.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -109,7 +110,9 @@
     box-shadow: 2px 2px 10px 0px rgba(232, 237, 237, 0.2);
 }
 
-  
+.header__icon:hover, .header__icon_opened:hover{
+   opacity: .5;
+}
   @media screen and (min-width: 1281px) {
     .header{
       margin: 0 auto;
@@ -145,9 +148,12 @@
     height: 20.5px;
     background-size: cover;
   }
+
   .header__icon_opened {
-    width: 22px;
-    height: 22px;
+    width: 28px;
+    height: 28px;
+    top: 15px;
+    right: 15px;
   }
     }
   
