--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -7,7 +7,7 @@
     color: #8B8B8B;
     font-weight: 400;
     font-size: 18px;
-    margin: 0 0 50px;
+    margin: 0 0 45px;
     padding: 0;
 }
 
@@ -16,7 +16,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 19px;
+    gap: 16px;
 }
 
 .portfolio__work{
@@ -29,28 +29,32 @@
 
 .portfolio__works li:not(:last-child) {
     border-bottom: 1px solid #424242;
-    padding-bottom: 18px;
+    padding-bottom: 13px;
 }
 
-.portfolio__work::after{
-content: "";
+.portfolio__work-name{
+    margin: 0;
+    color: #fff;
+  font-size: 30px;
+  line-height: 50px;
+  font-weight: 400;
+  letter-spacing: -1.2px;
+    }
+
+.portfolio__icon{
 background-image: url(../../images/gitlinks.svg);
 background-position: center;
 background-repeat: no-repeat;
 width: 29px;
 height: 60px;
-position: absolute;
-right: 0;
-top: -3px;
+margin: 0;
 }
 
 .portfolio__link{
+  display: flex;
   text-decoration: none;
-  color: #fff;
-  font-size: 30px;
-  line-height: 50px;
-  font-weight: 400;
-  letter-spacing: -1.2px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .portfolio__link:hover{
