--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,4 +1,14 @@
 .sideBar{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .3);
+  position: fixed;
+  top: 0; 
+  left: 0;
+  z-index: 9;
+  }
+
+  .sideBar__navigation{
     position: fixed;
     background-color: #202020;
     width: 520px;
@@ -11,7 +21,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
+    z-index: 10;
   }
 
   .sideBar__links{
@@ -27,6 +37,7 @@
     text-decoration: none;
     color: #fff;
     border-bottom: 1px solid transparent;
+    padding-bottom: 4px;
   }
 
   .sideBar__link:hover{
@@ -40,8 +51,11 @@
 }
 
 @media screen and (max-width: 600px) {
-    .sideBar{
+    .sideBar__navigation{
       width: 100%;
-      padding: 142px 0 47px;
+      padding: 144px 0 47px;
+  }
+  .sideBar__links{
+    gap: 21px;
   }
 }
