--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 246px 0 0;
+    margin: 0 auto 30px;
     gap: 184px;
 }
 
