--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -63,7 +63,7 @@
     font-weight: 500;
 }
 
-.header__account-link, .header__account-link_sideBar{
+.header__account-link{
     background-color: #313131;
     width: 100px;
     height: 32px;
@@ -106,7 +106,7 @@
     z-index: 10;
   }
 
-  .header__account-link:hover, .header__account-link_sideBar:hover{
+  .header__account-link:hover{
     box-shadow: 2px 2px 10px 0px rgba(232, 237, 237, 0.2);
 }
 
