--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -40,6 +40,28 @@
     padding-bottom: 4px;
   }
 
+  .sideBar__account-link{
+    background-color: #313131;
+    width: 100px;
+    height: 32px;
+    border-radius: 20px;
+    border: none;
+    justify-self: end;
+    padding: 0;
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sideBar__account-link:hover{
+    box-shadow: 2px 2px 10px 0px rgba(232, 237, 237, 0.2);
+}
+
   .sideBar__link:hover{
     border-bottom: 1px solid #fff;
   }
