--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -13,6 +13,10 @@
  
 }
 
+.navigation__films-link_active{
+  font-weight: 500;
+}
+
 .navigation__films-link:hover{
 border-bottom: 1px solid #fff;
 }
