--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -9,7 +9,9 @@ list-style-type:none;
 }
 
 .moviesCard__element{
-    max-width: 100%;
+    width: 100%;
+    height: 201px;
+    object-fit: cover;
 }
 
 .moviesCard__saveMovie{
@@ -46,7 +48,7 @@ list-style-type:none;
 }
 
 .moviesCard__duration{
-    width: 52px;
+    min-width: 52px;
     height: 18px;
     background-color: #2F2F2F;
     color: #8B8B8B;
