--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -59,11 +59,11 @@
 	border-radius: 50%;
 }
 
-.filterCheckbox__input:checked ~ .filterCheckbox__mark{
+.filterCheckbox__input_short ~ .filterCheckbox__mark{
 	background: #3DDC84;
 }
 
-.filterCheckbox__input:checked ~ .filterCheckbox__mark:before{
+.filterCheckbox__input_short ~ .filterCheckbox__mark:before{
 	left: 24px;
 }
 
