--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -64,6 +64,10 @@
     cursor: pointer;
 }
 
+.profile__change[disabled]{
+    color: grey;
+}
+
 .profile__signOut{
     background-color: transparent;
     border: none;
@@ -77,6 +81,10 @@
 
 .profile__change:hover{
     opacity: .5;
+}
+
+.profile__change[disabled]:hover{
+    opacity: 1;
 }
 
 .profile__signOut:hover{
