--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -22,7 +22,6 @@
 
 .profile__inputs{
     display: flex;
-    gap: 17px;
     flex-direction: column;
 }
 
@@ -45,14 +44,17 @@
 .profile__name{
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #424242;
-    padding-bottom: 8px;
     box-sizing: border-box;
+}
+
+.form__error_ProfileName{
+    border-bottom: 1px solid #424242;
 }
 
 .profile__email{
     display: flex;
     justify-content: space-between;
+    padding-top: 20px;
 }
 
 .profile__change{
