--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 @import url(./components/Navigation/Navigation.css);
 @import url(./components/NavTab/NavTab.css);
 @import url(./components/NotFoundPage/NotFoundPage.css);
+@import url(./components/NotFoundMovie/NotFoundMovie.css);
 @import url(./components/Popup/Popup.css);
 @import url(./components/Portfolio/Portfolio.css);
 @import url(./components/Preloader/Preloader.css);
